# libquickbit

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  README.md  libquickbit.gyp  package.json
.github/workflows/: test.yml
include/: field.h  quickbit.h
src/: field.c  quickbit.c
test/: CMakeLists.txt  clear.c  fill.c  find-first-indexed.c  find-first.c  find-last-indexed.c  find-last.c  get.c  index-fill-aligned.c  index-fill.c  index-init-sparse.c  index-init.c  index-is.c  index-of-indexed.c  index-of.c  index-set.c  index-unset.c  index-update-sweep.c  index-update.c  last-index-of-indexed.c  last-index-of.c  set.c  skip-backward.c  skip-first.c  skip-forward.c  skip-last-index-boundary.c  skip-last.c  sparse-index-update.c
test/fuzz/: CMakeLists.txt  index-fill.c
